--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@ description: Track and optimize your sales team in real time
 	<div class="text-container">
 		<h1 class="editable">The last sales CRM <strong>you'll ever need</strong></h1>
 		<p class="subtext editable">Track and optimize your sales team in real time.</p>
-		<div class="cta button alt"><a href="{{ site.baseurl }}/sign-up/">Get Started Free</a></div>
-		<div>
-			<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
-		</div>
+		<div class="cta button alt"><a href="https://era-dev.docs.stoplight.io/1.0">Getting Started</a></div>
 	</div>
 </section>
 
