--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 ---
-title: The last sales CRM you'll ever need
-description: Track and optimize your sales team in real time
+title: ERA API integration
+description: One-stop-shopping for European Rail Travel
 ---
 <section class="hero">
 	<div class="text-container">
-		<h1 class="editable">The last sales CRM <strong>you'll ever need</strong></h1>
-		<p class="subtext editable">Track and optimize your sales team in real time.</p>
+		<h1 class="editable">Rail Europe <strong>ERA API integration</strong></h1>
+		<p class="subtext editable">One-stop-shopping for European Rail Travel.</p>
 		<div class="cta button alt"><a href="https://era-dev.docs.stoplight.io/1.0">Getting Started</a></div>
 	</div>
 </section>
