--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 ---
-title: ERA API integration
-description: One-stop-shopping for European Rail Travel
+title: ERA API
+description: for developers
 ---
 <section class="hero">
 	<div class="text-container">
-		<h1 class="editable">Rail Europe <strong>ERA API integration</strong></h1>
-		<p class="subtext editable">One-stop-shopping for European Rail Travel.</p>
+		<h1 class="editable">Rail Europe <strong>ERA API</strong></h1>
+		<h2 class="subtext editable">for developers</h2>
 		<div class="cta button alt"><a href="https://era-dev.docs.stoplight.io/1.0">Getting Started</a></div>
 	</div>
 </section>
@@ -14,53 +14,36 @@ description: One-stop-shopping for European Rail Travel
 	<section>
 		<div class="container flex">
 			<div class="text editable">
-				<h2>How can we <strong>double</strong> our sales revenue?</h2>
-				<p>Hydra learns your business. By analyzing your sales data, Hydra optimizes your sales process and show you where you should be spending your resources. </p>
+				<h2>Learn with our <strong>knowledge base</strong> and book travels for your customers</h2>
 			</div>
 			<div class="image">
-				<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
+				<img src="{{ site.baseurl }}/images/home/knowledge base.png" alt="Screenshot" class="screenshot editable" />
 			</div>
 		</div>
 	</section>
-
 	<section>
 		<div class="container flex">
 			<div class="text editable">
-				<h2>How can I <strong>keep track</strong> of my sales team?</h2>
-				<p>Hydra learns your business. By analyzing your sales data, Hydra optimizes your sales process and show you where you should be spending your resources.</p>
+				<h2>An <strong>online api reference</strong> for straight forward integration</h2>
 			</div>
 			<div class="image">
-				<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
+				<img src="{{ site.baseurl }}/images/home/api reference.png" alt="Screenshot" class="screenshot editable" />
 			</div>
 		</div>
 	</section>
-
 	<section>
 		<div class="container flex">
 			<div class="text editable">
-				<h2>How can I <strong>forecast</strong> the next 90 days?</h2>
-				<p>Hydra learns your business. By analyzing your sales data, Hydra optimizes your sales process and show you where you should be spending your resources.</p>
+				<h2>Try out APIs examples using provided <strong>postman collection</strong></h2>
 			</div>
 			<div class="image">
-				<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
-			</div>
-		</div>
-	</section>
-
-	<section class="testimonial">
-		<div class="container flex">
-			<div class="testimonial-block">
-				<div class="square-image"><img src="https://source.unsplash.com/6anudmpILw4/600x400" alt="Jim James" class="editable"></div>
-				<blockquote>
-					<p class="editable">Hydra has shaped the business we have today. We have a repeatable sales process and a strategy to scale our team. I recommend Hydra to any business looking to improve their sales.</p>
-					<p class="editable author">Jim James - CEO of Global Corp.</p>
-				</blockquote>
+				<img src="{{ site.baseurl }}/images/home/postman.png" alt="Screenshot" class="screenshot editable" />
 			</div>
 		</div>
 	</section>
 
 	<section class="bottom-cta">
-		<h2 class="editable"><strong>Improve</strong> your sales process today</h2>
-		<div class="button alt"><a href="#">Get Started Free</a></div>
+		<h2 class="editable">Book travels for your customers</h2>
+		<div class="button alt"><a href="#">Getting started</a></div>
 	</section>
 </div>
