--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ description: for developers
 				<h2>Learn with our <strong>knowledge base</strong> and book travels for your customers</h2>
 			</div>
 			<div class="image">
-				<img src="{{ site.baseurl }}/images/home/knowledge base.png" alt="Screenshot" class="screenshot editable" />
+				<img src="{{ site.baseurl }}/images/home/knowledge base.png" alt="knowledge base" class="screenshot editable" />
 			</div>
 		</div>
 	</section>
@@ -27,7 +27,7 @@ description: for developers
 				<h2>An <strong>online api reference</strong> for straight forward integration</h2>
 			</div>
 			<div class="image">
-				<img src="{{ site.baseurl }}/images/home/api reference.png" alt="Screenshot" class="screenshot editable" />
+				<img src="{{ site.baseurl }}/images/home/api reference.png" alt="api reference" class="screenshot editable" />
 			</div>
 		</div>
 	</section>
@@ -37,13 +37,13 @@ description: for developers
 				<h2>Try out APIs examples using provided <strong>postman collection</strong></h2>
 			</div>
 			<div class="image">
-				<img src="{{ site.baseurl }}/images/home/postman.png" alt="Screenshot" class="screenshot editable" />
+				<img src="{{ site.baseurl }}/images/home/postman.png" alt="postman" class="screenshot editable" />
 			</div>
 		</div>
 	</section>
 
 	<section class="bottom-cta">
 		<h2 class="editable">Book travels for your customers</h2>
-		<div class="button alt"><a href="#">Getting started</a></div>
+		<div class="button alt"><a href="https://era-dev.docs.stoplight.io/1.0">Getting started</a></div>
 	</section>
 </div>
