--- a/postman/index.html
+++ b/postman/index.html
@@ -22,7 +22,7 @@ description: Configure a postman workspace for ERA API in a nutshell
 				<p>3. Import your new collection</p>
 			</div>
 			<div class="image">
-				<img src="{{ site.baseurl }}/images/postman/1.1 import collection link.png" alt="Import from blank workspace" class="screenshot editable" />
+				<img src="{{ site.baseurl }}/images/postman/1.1 import collection link.png" alt="Import ERA API collection" class="screenshot editable" />
 			</div>
 		</div>
 	</section>
@@ -32,7 +32,7 @@ description: Configure a postman workspace for ERA API in a nutshell
 				<h2><strong>Manage ERA API environments.</strong></h2>
 			</div>
 			<div class="image">
-				<img src="{{ site.baseurl }}/images/postman/2. manage environments.png" alt="Import from blank workspace" class="screenshot editable" />
+				<img src="{{ site.baseurl }}/images/postman/2. manage environments.png" alt="Manage ERA API environments" class="screenshot editable" />
 			</div>
 		</div>
 	</section>
@@ -42,7 +42,7 @@ description: Configure a postman workspace for ERA API in a nutshell
 				<p>1. Select to import an existing environment</p>
 			</div>
 			<div class="image">
-				<img src="{{ site.baseurl }}/images/postman/2.1 import environment.png" alt="Import from blank workspace" class="screenshot editable" />
+				<img src="{{ site.baseurl }}/images/postman/2.1 import environment.png" alt="Import an existing environment" class="screenshot editable" />
 			</div>
 		</div>
 	</section>
@@ -54,7 +54,7 @@ description: Configure a postman workspace for ERA API in a nutshell
 				<p>3. Select file <strong>Hand-on ERA API acceptance.postman_environment.json</strong> in your local directory</p>
 			</div>
 			<div class="image">
-				<img src="{{ site.baseurl }}/images/postman/2.1 import environment.png" alt="Import from blank workspace" class="screenshot editable" />
+				<img src="{{ site.baseurl }}/images/postman/2.1 import environment.png" alt="Select environment file to import" class="screenshot editable" />
 			</div>
 		</div>
 	</section>
@@ -64,7 +64,7 @@ description: Configure a postman workspace for ERA API in a nutshell
 				<p>4. Add the imported environment</p>
 			</div>
 			<div class="image">
-				<img src="{{ site.baseurl }}/images/postman/2.3 add environment.png" alt="Import from blank workspace" class="screenshot editable" />
+				<img src="{{ site.baseurl }}/images/postman/2.3 add environment.png" alt="Add the imported environment" class="screenshot editable" />
 			</div>
 		</div>
 	</section>
@@ -74,7 +74,7 @@ description: Configure a postman workspace for ERA API in a nutshell
 				<p>5. Complete the environment configuration with the settings provided by Rail Europe</p>
 			</div>
 			<div class="image">
-				<img src="{{ site.baseurl }}/images/postman/2.4 complete environment.png" alt="Import from blank workspace" class="screenshot editable" />
+				<img src="{{ site.baseurl }}/images/postman/2.4 complete environment.png" alt="Complete the environment configuration" class="screenshot editable" />
 			</div>
 		</div>
 	</section>
@@ -84,7 +84,7 @@ description: Configure a postman workspace for ERA API in a nutshell
 				<h2><strong>Search some point-to-point offers...</strong></h2>
 			</div>
 			<div class="image">
-				<img src="{{ site.baseurl }}/images/postman/3. try search ptp offers.png" alt="Import from blank workspace" class="screenshot editable" />
+				<img src="{{ site.baseurl }}/images/postman/3. try search ptp offers.png" alt="Search some point-to-point offers" class="screenshot editable" />
 			</div>
 		</div>
 	</section>
@@ -94,7 +94,7 @@ description: Configure a postman workspace for ERA API in a nutshell
 				<p>You're not authorized (yet!) to access ERA API, you need to generate a token.</p>
 			</div>
 			<div class="image">
-				<img src="{{ site.baseurl }}/images/postman/3.1 unauthorized.png" alt="Import from blank workspace" class="screenshot editable" />
+				<img src="{{ site.baseurl }}/images/postman/3.1 unauthorized.png" alt="You're not authorized (yet!) to access ERA API" class="screenshot editable" />
 			</div>
 		</div>
 	</section>
@@ -105,7 +105,7 @@ description: Configure a postman workspace for ERA API in a nutshell
 				<p>2. And go to "Hands-on ERA API" link</p>
 			</div>
 			<div class="image">
-				<img src="{{ site.baseurl }}/images/postman/4. authorize client.png" alt="Import from blank workspace" class="screenshot editable" />
+				<img src="{{ site.baseurl }}/images/postman/4. authorize client.png" alt="Authorize your request" class="screenshot editable" />
 			</div>
 		</div>
 	</section>
@@ -115,7 +115,7 @@ description: Configure a postman workspace for ERA API in a nutshell
 				<p>3. Get a new access token</p>
 			</div>
 			<div class="image">
-				<img src="{{ site.baseurl }}/images/postman/4.1 get new access token.png" alt="Import from blank workspace" class="screenshot editable" />
+				<img src="{{ site.baseurl }}/images/postman/4.1 get new access token.png" alt="Get a new access token" class="screenshot editable" />
 			</div>
 		</div>
 	</section>
@@ -126,7 +126,7 @@ description: Configure a postman workspace for ERA API in a nutshell
 				<p>5. And finally select "Use Token" option</p>
 			</div>
 			<div class="image">
-				<img src="{{ site.baseurl }}/images/postman/4.2 request token.png" alt="Import from blank workspace" class="screenshot editable" />
+				<img src="{{ site.baseurl }}/images/postman/4.2 request token.png" alt="Request ERA authorization server for a new token" class="screenshot editable" />
 			</div>
 		</div>
 	</section>
@@ -136,7 +136,7 @@ description: Configure a postman workspace for ERA API in a nutshell
 				<p>6. Now you can update your configuration with the provided access token</p>
 			</div>
 			<div class="image">
-				<img src="{{ site.baseurl }}/images/postman/4.4 update configuration.png" alt="Import from blank workspace" class="screenshot editable" />
+				<img src="{{ site.baseurl }}/images/postman/4.4 update configuration.png" alt="Update your configuration with the provided access token" class="screenshot editable" />
 			</div>
 		</div>
 	</section>
@@ -147,7 +147,7 @@ description: Configure a postman workspace for ERA API in a nutshell
 				<h2>And voila, you finally succeed doing your first ERA API request!</h2>
 			</div>
 			<div class="image">
-				<img src="{{ site.baseurl }}/images/postman/5. success.png" alt="Import from blank workspace" class="screenshot editable" />
+				<img src="{{ site.baseurl }}/images/postman/5. success.png" alt="Success" class="screenshot editable" />
 			</div>
 		</div>
 	</section>
