--- a/index.html
+++ b/index.html
@@ -44,6 +44,6 @@ description: for developers
 
 	<section class="bottom-cta">
 		<h2 class="editable">Book travels for your customers</h2>
-		<div class="button alt"><a href="https://era-dev.docs.stoplight.io/1.0">Getting started</a></div>
+		<div class="button alt"><a href="https://era-dev.docs.stoplight.io/1.0">Getting Started</a></div>
 	</section>
 </div>
