fix stoplight links

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ description: for developers
 	<div class="text-container">
 		<h1 class="editable">Rail Europe <strong>ERA API</strong></h1>
 		<h2 class="subtext editable">for developers</h2>
-		<div class="cta button alt"><a href="https://era-dev.docs.stoplight.io/1.0">Getting Started</a></div>
+		<div class="cta button alt"><a href="https://era-dev.docs.stoplight.io">Getting Started</a></div>
 	</div>
 </section>
 
@@ -14,7 +14,7 @@ description: for developers
 	<section>
 		<div class="container flex">
 			<div class="text editable">
-				<h2>Learn with our <strong>knowledge base</strong> and book travels for your customers</h2>
+				<h2>A <strong>knowledge base</strong> to learn how to book travels for your customers</h2>
 			</div>
 			<div class="image">
 				<img src="{{ site.baseurl }}/images/home/knowledge base.png" alt="knowledge base" class="screenshot editable" />
@@ -44,6 +44,6 @@ description: for developers
 
 	<section class="bottom-cta">
 		<h2 class="editable">Book travels for your customers</h2>
-		<div class="button alt"><a href="https://era-dev.docs.stoplight.io/1.0">Getting Started</a></div>
+		<div class="button alt"><a href="https://era-dev.docs.stoplight.io">Getting Started</a></div>
 	</section>
 </div>
