--- a/postman/index.html
+++ b/postman/index.html
@@ -39,7 +39,7 @@ description: Configure a postman workspace for ERA API in a nutshell
 	<section>
 		<div class="container flex">
 			<div class="text editable">
-				<p>1. Download on a local directory: <a href="{{ site.baseurl }}/downloads/Hands-on ERA API .postman_collection.json">Hands-on ERA API environment template</a></p>
+				<p>1. Download on a local directory: <a href="{{ site.baseurl }}/downloads/Hand-on ERA API acceptance.postman_environment.json">Hands-on ERA API environment template</a></p>
 				<p>2. Select to import an existing environment</p>
 				<p>3. Select file <strong>Hand-on ERA API acceptance.postman_environment.json</strong> in your local directory</p>
 			</div>
