--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ description: for developers
 				<h2>An <strong>online api reference</strong> for straight forward integration</h2>
 			</div>
 			<div class="image">
-				<a href="https://era-dev.docs.stoplight.io/api-reference/intro"><img src="{{ site.baseurl }}/images/home/api reference.png" alt="api reference" class="screenshot editable" /></a>
+				<a href="https://era-dev.docs.stoplight.io/api-reference"><img src="{{ site.baseurl }}/images/home/api reference.png" alt="api reference" class="screenshot editable" /></a>
 			</div>
 		</div>
 	</section>
