move acceptance to sandbox

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ description: for developers
 	<div class="text-container">
 		<h1 class="editable">Rail Europe <strong>ERA API</strong></h1>
 		<h2 class="subtext editable">for developers</h2>
-		<div class="cta button alt"><a href="https://era-dev.docs.stoplight.io">Getting Started</a></div>
+		<div class="cta button alt"><a href="https://era.docs.stoplight.io">Getting Started</a></div>
 	</div>
 </section>
 
@@ -44,6 +44,6 @@ description: for developers
 
 	<section class="bottom-cta">
 		<h2 class="editable">Book travels for your customers</h2>
-		<div class="button alt"><a href="https://era-dev.docs.stoplight.io">Getting Started</a></div>
+		<div class="button alt"><a href="https://era.docs.stoplight.io">Getting Started</a></div>
 	</section>
 </div>
