--- a/postman/index.html
+++ b/postman/index.html
@@ -39,9 +39,9 @@ description: Configure a postman workspace for ERA API in a nutshell
 	<section>
 		<div class="container flex">
 			<div class="text editable">
-				<p>1. Download on a local directory: <a href="{{ site.baseurl }}/downloads/Hand-on ERA API acceptance.postman_environment.json">Hands-on ERA API environment template</a></p>
+				<p>1. Download on a local directory: <a href="{{ site.baseurl }}/downloads/Hand-on ERA API sandbox.postman_environment.json">Hands-on ERA API environment template</a></p>
 				<p>2. Select to import an existing environment</p>
-				<p>3. Select file <strong>Hand-on ERA API acceptance.postman_environment.json</strong> in your local directory</p>
+				<p>3. Select file <strong>Hand-on ERA API sandbox.postman_environment.json</strong> in your local directory</p>
 			</div>
 			<div class="image">
 				<img src="{{ site.baseurl }}/images/postman/2.1 import environment.png" alt="Select environment file to import" class="screenshot editable" />
