add contact support

--- a/postman/index.html
+++ b/postman/index.html
@@ -62,6 +62,7 @@ description: Configure a postman workspace for ERA API in a nutshell
 		<div class="container flex">
 			<div class="text editable">
 				<p>5. Complete the environment configuration with the settings provided by Rail Europe</p>
+				<p>Please contact our <a href="mailto:webservices.support@raileurope.com">support team</a> to get your test environment credentials.</p>
 			</div>
 			<div class="image">
 				<img src="{{ site.baseurl }}/images/postman/2.4 complete environment.png" alt="Complete the environment configuration" class="screenshot editable" />
