--- a/postman/index.html
+++ b/postman/index.html
@@ -18,7 +18,7 @@ description: Configure a postman workspace for ERA API in a nutshell
 		<div class="container flex">
 			<div class="text editable">
 				<p>1. Choose "import from link"</p>
-				<p>2. Paste this link: <a href="https://www.getpostman.com/collections/c7adfdb62531e7013a4e">Hands-on ERA API collection</a></p>
+				<p>2. Paste this link: <a href="https://era.docs.stoplight.io/overview/requests#try-out-with-postman">Hands-on ERA API collection</a></p>
 				<p>3. Import your new collection</p>
 			</div>
 			<div class="image">
