--- a/postman/index.html
+++ b/postman/index.html
@@ -18,7 +18,7 @@ description: Configure a postman workspace for ERA API in a nutshell
 		<div class="container flex">
 			<div class="text editable">
 				<p>1. Choose "import from link"</p>
-				<p>2. Paste this link: <a href="https://era.docs.stoplight.io/overview/requests#try-out-with-postman">Hands-on ERA API collection</a></p>
+				<p>2. Paste the link from API docs: <a href="https://era.docs.stoplight.io/overview/requests#try-out-with-postman">Hands-on ERA API collection</a></p>
 				<p>3. Import your new collection</p>
 			</div>
 			<div class="image">
@@ -39,7 +39,7 @@ description: Configure a postman workspace for ERA API in a nutshell
 	<section>
 		<div class="container flex">
 			<div class="text editable">
-				<p>1. Download on a local directory: <a href="{{ site.baseurl }}/downloads/Hand-on ERA API sandbox.postman_environment.json">Hands-on ERA API environment template</a></p>
+				<p>1. Download on a local directory the file from API docs: <a href="https://era.docs.stoplight.io/overview/requests#try-out-with-postman">Hands-on ERA API environment template</a></p>
 				<p>2. Select to import an existing environment</p>
 				<p>3. Select file <strong>Hand-on ERA API sandbox.postman_environment.json</strong> in your local directory</p>
 			</div>
