new domaine name for api docs

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ description: for developers
 				<h2>A <strong>knowledge base</strong> to learn how to book travels for your customers</h2>
 			</div>
 			<div class="image">
-				<a href="https://era-dev.docs.stoplight.io/"><img src="{{ site.baseurl }}/images/home/knowledge base.png" alt="knowledge base" class="screenshot editable" /></a>
+				<a href="https://docs.era.raileurope.com/"><img src="{{ site.baseurl }}/images/home/knowledge base.png" alt="knowledge base" class="screenshot editable" /></a>
 			</div>
 		</div>
 	</section>
@@ -27,7 +27,7 @@ description: for developers
 				<h2>An <strong>online api reference</strong> for straight forward integration</h2>
 			</div>
 			<div class="image">
-				<a href="https://era-dev.docs.stoplight.io/api-reference"><img src="{{ site.baseurl }}/images/home/api reference.png" alt="api reference" class="screenshot editable" /></a>
+				<a href="https://docs.era.raileurope.com/api-reference"><img src="{{ site.baseurl }}/images/home/api reference.png" alt="api reference" class="screenshot editable" /></a>
 			</div>
 		</div>
 	</section>
