--- a/postman/index.html
+++ b/postman/index.html
@@ -18,7 +18,7 @@ description: Configure a postman workspace for ERA API in a nutshell
 		<div class="container flex">
 			<div class="text editable">
 				<p>1. Choose "import from link"</p>
-				<p>2. Paste the link from API docs: <a href="https://docs.era.raileurope.com/overview/requests#try-out-with-postman">Hands-on ERA API collection</a></p>
+				<p>2. Paste the link from API docs: <a href="https://docs.era.raileurope.com/docs/era-api-doc/ZG9jOjMwNzkyNTU0-requests#try-out-with-postman">Hands-on ERA API collection</a></p>
 				<p>3. Import your new collection</p>
 			</div>
 			<div class="image">
