Update URL after repo renaming

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ description: for developers
 				<h2>Try out APIs examples using provided <strong>postman collection</strong></h2>
 			</div>
 			<div class="image">
-				<a href="https://rail-europe.github.io/era-api/postman/"><img src="{{ site.baseurl }}/images/home/postman.png" alt="postman" class="screenshot editable" /></a>
+				<a href="https://raileurope.github.io/era-api/postman/"><img src="{{ site.baseurl }}/images/home/postman.png" alt="postman" class="screenshot editable" /></a>
 			</div>
 		</div>
 	</section>
